--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="grey">#E3E2DF</color>
     <color name="red">#F44336</color>
     <color name="green">#88F436</color>
-    <color name="lightGrey">#7EFFFFFF</color>
+    <color name="lightGrey">#c3c3c3</color>
 </resources>
