--- a/app/src/main/res/layout/empty_state.xml
+++ b/app/src/main/res/layout/empty_state.xml
@@ -1,40 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <LinearLayout
+        android:id="@+id/empty_state_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:id="@+id/empty_state_root"
         android:orientation="vertical">
-
-
         <TextView
             android:id="@+id/tvErrorMessage"
-            android:textColor="@color/colorPrimary"
-
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_height="wrap_content"
             android:lineSpacingExtra="@dimen/_2sdp"
             android:text="@string/ooops_can_t_load_data_due_to_connection_issue_n_please_click_the_retry_button_to_reload"
-            android:textSize="@dimen/_14sdp"
-            />
-
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/_14sdp" />
         <Button
             android:id="@+id/btnReload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/text_retry"
             android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"
+            android:text="@string/text_retry"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/tvErrorMessage" />
     </LinearLayout>
-
 </layout>
