--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,50 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
-
         <import type="android.view.View" />
-
         <variable
             name="reddits"
             type="com.muryno.domain.entiity.RedditPostEntity" />
-
         <variable
             name="viewModel"
             type="com.muryno.reddits.presenter.viewmodel.DetailsViewModel" />
-
     </data>
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:background="@color/white">
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
-            android:layout_height="350dp"
-            android:layout_width="match_parent">
-
-
+            android:layout_width="match_parent"
+            android:layout_height="350dp">
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/details_toolbar"
+                android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:background="?attr/colorPrimary"
                 android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                android:layout_width="match_parent"
-                android:layout_marginBottom="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                app:layout_constraintTop_toTopOf="parent"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
             <RelativeLayout
                 android:id="@+id/relative_layout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/img"
                     android:layout_width="match_parent"
@@ -62,105 +51,94 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_marginEnd="16dp"
+                android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
-                android:layout_height="match_parent">
-
+                android:layout_marginEnd="16dp">
                 <RelativeLayout
-                    android:orientation="vertical"
-                    android:focusableInTouchMode="true"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="true"
+                    android:orientation="vertical">
                     <ScrollView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:orientation="vertical">
-
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black"
                                 android:layout_marginBottom="30dp"
-                                android:textSize="26sp"
-                                android:transitionName="@string/reddit_Title_Transition"
+                                android:fontFamily="sans-serif-black"
                                 android:text="@{reddits.title}"
-                                android:fontFamily="sans-serif-black" />
-
+                                android:textColor="@color/black"
+                                android:textSize="26sp"
+                                android:transitionName="@string/reddit_Title_Transition" />
                             <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_marginEnd="10dp"
+                                android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
-                                android:layout_height="wrap_content">
-
+                                android:layout_marginEnd="10dp">
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="30dp"
-                                    android:textSize="15sp"
                                     android:text="@{reddits.author}"
-                                    android:textColor="@color/black" />
-
+                                    android:textColor="@color/black"
+                                    android:textSize="15sp" />
                                 <TextView
                                     android:id="@+id/details_publish"
-                                    android:text="@{reddits.author_fullname}"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
                                     android:layout_marginBottom="30dp"
-                                    android:textSize="13sp"
-                                    android:layout_alignParentEnd="true" />
+                                    android:text="@{reddits.author_fullname}"
+                                    android:textSize="13sp" />
                             </RelativeLayout>
-
                             <TextView
                                 android:id="@+id/txtDetailItemQty"
                                 style="@style/TextAppearance.AppCompat.Medium"
                                 android:layout_width="wrap_content"
-                                android:layout_margin="10dp"
                                 android:layout_height="0dp"
-                                android:text="@{reddits.author_fullname}"
-                                android:textColor="@color/black"
+                                android:layout_margin="10dp"
                                 android:layout_marginStart="4dp"
-                                android:layout_weight="1" />
+                                android:layout_weight="1"
+                                android:text="@{reddits.author_fullname}"
+                                android:textColor="@color/black" />
                         </LinearLayout>
                     </ScrollView>
                 </RelativeLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
-            app:layout_anchor="@id/appbar"
-            app:fabSize="normal"
-            app:layout_anchorGravity="bottom|right|end"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="6dp"
-            app:iconTint="@color/white"
-            android:visibility="@{reddits.favourite==null ?View.VISIBLE : View.GONE}"
+            android:contentDescription="@string/add_post_to_favourite"
             android:onClick="@{()->viewModel.saveFavouritePostUseCase(reddits)}"
             android:src="@drawable/ic_add"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/add_post_to_favourite" />
-
+            android:visibility="@{reddits.favourite==null ?View.VISIBLE : View.GONE}"
+            app:fabSize="normal"
+            app:iconTint="@color/white"
+            app:layout_anchor="@id/appbar"
+            app:layout_anchorGravity="bottom|right|end" />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/delete_button"
             android:layout_width="wrap_content"
-            app:layout_anchor="@id/appbar"
-            app:fabSize="normal"
-            app:layout_anchorGravity="bottom|right|end"
-            android:layout_marginEnd="6dp"
-            app:iconTint="@color/white"
-            android:backgroundTint="@color/red"
-            android:visibility="@{reddits.favourite!=null ?View.VISIBLE : View.GONE}"
-            android:src="@drawable/ic_delete"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/delete_single_post_button" />
+            android:layout_marginEnd="6dp"
+            android:backgroundTint="@color/red"
+            android:contentDescription="@string/delete_single_post_button"
+            android:src="@drawable/ic_delete"
+            android:visibility="@{reddits.favourite!=null ?View.VISIBLE : View.GONE}"
+            app:fabSize="normal"
+            app:iconTint="@color/white"
+            app:layout_anchor="@id/appbar"
+            app:layout_anchorGravity="bottom|right|end" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
 
